--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,7 @@ body{
 .Row__Inner{
   display: flex;
   align-items: center;
+
 }
 
 .TopMovies{
@@ -239,6 +240,8 @@ body{
   min-width: 230px;
   height: 150px;
   margin: 0 10px;
+  touch-action: none;
+
 }
 
 .TopMovies{
@@ -324,7 +327,7 @@ body{
   display: flex;
   align-items: center;
   color: white;
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 500;
   margin-left: 5px;
 }
@@ -462,9 +465,12 @@ body{
 }
 
 .General__Item--Genres{
+  overflow: none;
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   padding-bottom: 10px;
+  height: auto;
 }
 
 .General__Item:nth-child(3){
@@ -474,7 +480,7 @@ body{
 .Item__Genre{
   text-align: center;
   font-size: 12px;
-  margin: 0 10px;
+  margin: 10px 10px;
 }
 
 .Modal__Wrapper{
