--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,7 @@ body{
 
 
 .ContainerMovies{
+  z-index: 888888;
   width: 90%;
   margin-left: 5%;
   margin-top: 100px;
@@ -216,7 +217,6 @@ body{
   width: 100%;
   height: auto;
   overflow: hidden;
-  touch-action: pan-x;
   position: relative;
 }
 
@@ -231,7 +231,7 @@ body{
 
 .Row__Arrow-Right, .Row__Arrow-Left{
   position: absolute;
-  z-index: 88888;
+  z-index:4444;
   width:50px;
   display: flex;
   align-items: center;
@@ -298,7 +298,6 @@ body{
   min-width: 230px;
   height: 150px;
   margin: 0 10px;
-  touch-action: none;
 
 }
 
@@ -401,7 +400,7 @@ body{
 
 
 .Modal{
-  z-index: 8888;
+  z-index: 9999999;
   position: fixed;
   width: 50%;
   background: #16182C;
