--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ body{
   background: none;
   color: white;
   text-align: center;
-  border-radius: 15px;
+  border-radius: 10px;
+  border:2px solid rgb(76, 107, 190);
 }
 
 
