--- a/styles.css
+++ b/styles.css
@@ -96,14 +96,26 @@ body{
 }
 
 
+.Navbar__Search button{ 
+  outline: none;
+  width: 40px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  background:#0f81de5b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .Navbar__Search img{ 
   cursor: pointer;
   width: 20px;
   height: 20px;
   padding: 5px;
   border-radius: 10px;
-  background:#0f81de5b;
 }
+
 .Navbar__Min{
   display: none;
 }
@@ -153,7 +165,9 @@ body{
   margin-top: 15px;
   text-align: center;
   width: 100%;
-  height: auto;
+  max-height: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .Banner__Buttons{
@@ -943,4 +957,46 @@ body{
 
 .SeeMovie--Error p{
   margin-left: 15px;
+}
+
+.ContainerError{
+  position: relative;
+  overflow: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Error__Image{
+  width: 100%;
+  height: 100vh;
+}
+
+.Error__ImageFilter{
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  height: 100%;
+  background:linear-gradient(180deg, rgba(33, 30, 30, 0.24) 0%, #020006 100%);
+  width: 100%;
+}
+
+.Error__Info{
+  z-index: 999999999999999;
+  text-align: center;
+  color: white;
+  font-weight: 600;
+  font-size: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+.ContainerError img{
+  object-fit: cover;
+  width: 100%;
+  height: 99%;
+
 }
